--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset=utf-8>
     <title>Sergi Chalauri</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Fira+Mono:wght@400;500&display=swap"
+        rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
