--- a/index.html
+++ b/index.html
@@ -2,20 +2,84 @@
 <html lang=en>
 
 <head>
-    <meta charset=utf-8>
-    <title>Sergi Chalauri</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Fira+Mono:wght@400;500&display=swap"
-        rel="stylesheet">
-    <link href="style.css" rel="stylesheet" />
+	<meta charset=utf-8>
+	<title>Sergi Chalauri</title>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Fira+Mono:wght@400;500&display=swap"
+		rel="stylesheet">
+	<link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div style="padding: 2em;">
-        <img src="assets/hello-world-pixel-speech-bubble.gif" class="comic-inline" style="margin-left: 12em; height: 12em;"/>
-        <br />
-        <img src="assets/Sergi Chalauri.png" style="height: 8em;" />
-    </div>
+	<h1>Application dependency management in Python</h1>
+	<pre>.DELETE_ON_ERROR:
+SHELL := /bin/bash
+
+WITH_VENV := source venv/bin/activate && 
+
+.PHONY: clean
+clean:
+	rm -f .make.*
+	rm -rf venv*
+
+# Environment:
+
+venv/bin/activate:
+	/usr/bin/python3.8 --version
+	virtualenv --python=/usr/bin/python3.8 venv
+
+.make.venv: venv/bin/activate
+	touch .make.venv
+
+.make.venv.pip-tools: .make.venv requirements/pip-tools.txt
+	${WITH_VENV} pip install -r requirements/pip-tools.txt
+	touch .make.venv.pip-tools
+
+.make.venv.dev: .make.venv.pip-tools
+.make.venv.dev: requirements/pip-tools.txt requirements/base.txt requirements/dev.txt
+	@ echo 'NOTE: `touch requirements/{base,deploy,dev}.txt` to snooze dependency upgrade when `.in` files are modified.'
+	${WITH_VENV} pip-sync requirements/pip-tools.txt requirements/base.txt requirements/dev.txt
+	touch .make.venv.dev
+
+# Requirements:
+
+requirements/base.txt: requirements/pip-tools.txt 
+requirements/base.txt: requirements/base.in
+requirements/base.txt: | .make.venv.pip-tools
+	${WITH_VENV} pip-compile requirements/base.in
+
+requirements/deploy.txt: requirements/pip-tools.txt requirements/base.txt 
+requirements/deploy.txt: requirements/deploy.in
+requirements/deploy.txt: | .make.venv.pip-tools
+	${WITH_VENV} pip-compile requirements/deploy.in
+
+requirements/dev.txt: requirements/pip-tools.txt requirements/base.txt requirements/deploy.txt 
+requirements/dev.txt: requirements/dev.in
+requirements/dev.txt: | .make.venv.pip-tools
+	${WITH_VENV} pip-compile requirements/dev.in
+	
+.PHONY: requirements
+requirements: requirements/base.txt requirements/dev.txt requirements/deploy.txt
+	@ echo 'NOTE: `rm requirements/{base,deploy,dev}.txt` before `make requirements` to upgrade all the dependencies.'
+
+# Entrypoints:
+
+.PHONY: test-unit
+test-unit: .make.venv.dev
+	@ ${WITH_VENV} python -c 'import pytest; print("pytest would run as version " + pytest.__version__ + "!")'</pre>
+
+	<p>This is pretty cool. <code>make test-unit</code> on a fresh repo will:
+	<ol>
+		<li>Create a new virtual environment under <code>venv</code>.</li>
+		<li>Install <code>pip-tools</code> in it.</li>
+		<li><code>pip-sync</code> all the requirements - both application and development dependencies.</li>
+		<li>Run whatever we needed to run in the beginning, in this case - <code>pytest</code>.</li>
+	</ol>
+	Of course, all of this happens under <code>venv</code> environment.
+	</p>
+	
+	<p>Cont.</p>
+
 </body>
 
 </html>
