--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<h1 id="app-deps-py">Application dependency management in Python</h1>
+	<h1><a href="#app-deps-py" id="app-deps-py" aria-hidden="true">Application dependency management in Python</a></h1>
 	<pre># Makefile
 
 .DELETE_ON_ERROR:
